--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
+    "axios": "^0.27.2",
     "postcss": "^8.4.16",
     "postcss-nesting": "^10.1.10",
     "tailwind-styled-components": "^2.1.8",
